fix - letter spacing on mobile

--- a/src/components/Game/Wheel.css
+++ b/src/components/Game/Wheel.css
@@ -142,6 +142,5 @@
 
   .ui-wheel-of-fortune li .text-wrapper {
     letter-spacing: -0.65px;
-    text-indent: 30%;
   }
 }
